# gnostic-models-rust

./: .gitignore  Cargo.toml  README.md
crates/gnostic-compiler/: Cargo.toml
crates/gnostic-compiler/src/: context.rs  error.rs  extensions.rs  helpers.rs  lib.rs  reader.rs
crates/gnostic-discovery/: Cargo.toml  build.rs
crates/gnostic-discovery/src/: document.rs  lib.rs  list.rs  parser.rs
crates/gnostic-discovery/tests/: integration_tests.rs
crates/gnostic-extensions/: Cargo.toml  build.rs
crates/gnostic-extensions/src/: lib.rs
crates/gnostic-jsonschema/: Cargo.toml
crates/gnostic-jsonschema/src/: base.rs  display.rs  lib.rs  models.rs  operations.rs  reader.rs  writer.rs
crates/gnostic-openapiv2/: Cargo.toml  build.rs
crates/gnostic-openapiv2/src/: document.rs  lib.rs  parser.rs
crates/gnostic-openapiv2/tests/: integration_tests.rs
crates/gnostic-openapiv3/: Cargo.toml  build.rs
crates/gnostic-openapiv3/src/: document.rs  lib.rs  parser.rs
crates/gnostic-openapiv3/tests/: integration_tests.rs
proto/: annotations.proto
testdata/: books-discovery-reference.json  books-discovery.json  generate_reference.go  petstore-v2-reference.json  petstore-v3-reference.json
