[workspace]
resolver = "2"
members = [
    "crates/gnostic-compiler",
    "crates/gnostic-jsonschema",
    "crates/gnostic-extensions",
    "crates/gnostic-openapiv3",
    "crates/gnostic-openapiv2",
    "crates/gnostic-discovery",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/google/gnostic-models"
description = "Protocol buffer models for OpenAPI and related formats"

[workspace.dependencies]
# Internal crates
gnostic-compiler = { path = "crates/gnostic-compiler" }
gnostic-jsonschema = { path = "crates/gnostic-jsonschema" }
gnostic-extensions = { path = "crates/gnostic-extensions" }
gnostic-openapiv3 = { path = "crates/gnostic-openapiv3" }
gnostic-openapiv2 = { path = "crates/gnostic-openapiv2" }
gnostic-discovery = { path = "crates/gnostic-discovery" }

# Protocol Buffers (company approved)
prost = "0.12"
prost-types = "0.12"

# YAML/JSON processing (company approved)
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.114"

# HTTP/Network (company approved)
hyper = { version = "=0.14.30", features = ["full"] }
http = "0.2.12"

# Async runtime (company approved)
tokio = { version = "=1.39.2", features = ["full"] }

# Error handling (company approved)
thiserror = { version = "1.0.49" }

# URL parsing (company approved)
url = { version = "2.5.4" }

# Concurrency utilities (company approved)
once_cell = "1.19.0"
parking_lot = "0.12.3"

# Regex (company approved)
regex = { version = "1.10.2" }

# Logging (company approved)
log = "0.4.22"

[workspace.dependencies.prost-build]
version = "0.12"
