[package]
name = "gnostic-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compiler support library for gnostic-models"

[dependencies]
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }

[dev-dependencies]
