[package]
name = "gnostic-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Google API Discovery format support for gnostic-models"

[dependencies]
gnostic-compiler = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
