[package]
name = "gnostic-jsonschema"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JSON Schema support library for gnostic-models"

[dependencies]
gnostic-compiler = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
