[package]
name = "gnostic-openapiv2"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenAPI v2 (Swagger) support for gnostic-models"

[dependencies]
gnostic-compiler = { workspace = true }
gnostic-extensions = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
yaml-rust2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
